- fix bug: move unit hint if content is invalid to prevent information overlaps  - bump version

--- a/src/index.styl
+++ b/src/index.styl
@@ -4,6 +4,9 @@
   pointer-events: none
   text-align: right
   margin: -1.75em .5em 0 0
+  transition: margin-right .15s ease-in-out
   line-height: 1em
   font-size: .75em
+.is-invalid + .unit
+  margin-right: 2.75em
 
